--- a/SimpleMvc.App/SimpleMvc.App.csproj
+++ b/SimpleMvc.App/SimpleMvc.App.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\WebServer\WebServer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+
 </Project>
